Lightbox close button overlap on admin-bar, fix #148

--- a/assets/css/lightgallery.css
+++ b/assets/css/lightgallery.css
@@ -972,4 +972,8 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   transition: left 1s cubic-bezier(0, 0, 0.25, 1) 0s, opacity 0.1s ease 0s;
 }
 
+body.lg-on #wpadminbar {
+	display: none !important;
+}
+
 /*# sourceMappingURL=lightgallery.css.map */
